<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="32dp"
    tools:context=".MainFragment">

    <ImageView
        android:id="@+id/mtls_on"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/ic_mtls_on"
        android:contentDescription="@string/secure_icon"
        app:layout_constraintBottom_toTopOf="@id/card_view"
        app:layout_constraintEnd_toStartOf="@id/mtls_off"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/mtls_off"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/ic_mtls_off"
        android:contentDescription="@string/insecure_icon"
        app:layout_constraintBottom_toTopOf="@id/card_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/mtls_on"
        app:layout_constraintTop_toTopOf="@id/mtls_on"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintBottom_toTopOf="@id/button_web_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mtls_on" >
        <TextView
            style="@style/TextAppearance.AppCompat.Headline"
            android:id="@+id/textview_first"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/description"
            android:textAlignment="center" />
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/button_web_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/open_web_view"
        app:layout_constraintBottom_toTopOf="@id/button_ok_http"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card_view" />

    <Button
        android:id="@+id/button_ok_http"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ok_http_request"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_web_view" />
</androidx.constraintlayout.widget.ConstraintLayout>